--- a/styles/sections/register.css
+++ b/styles/sections/register.css
@@ -28,7 +28,7 @@
   width: 50%;
   height: auto;
   position: relative;
-  top: -5rem;
+  top: -4rem;
   z-index: 2;
 }
 
